--- a/index.html
+++ b/index.html
@@ -84,22 +84,22 @@
       <div class="project">
         <h3>Rational Agent PacMan Game</h3>
         <p>A Python-based PacMan game with an AI-driven rational agent using search algorithms to navigate the maze, achieving 90% win rate against ghosts. Includes a detailed README.</p>
-        <a href="https://github.com/JustisDutt/RationalAgentPacMan">GitHub</a>
+        <a href="https://github.com/JustisDutt/Rational-Agent-PacMan-Game">GitHub</a>
       </div>
       <div class="project">
         <h3>Network Game TicTacToe</h3>
         <p>A networked TicTacToe game built with Java, featuring real-time multiplayer functionality using TCP sockets, with the abilty to support 50+ concurrent players. Includes a detailed README.</p>
-        <a href="https://github.com/JustisDutt/NetworkGameTicTacToe">GitHub</a>
+        <a href="https://github.com/JustisDutt/Network-Game-TicTacToe">GitHub</a>
       </div>
       <div class="project">
         <h3>Multicast Stock Ticker</h3>
         <p>A Java-based multicast stock ticker application where the server reads stock names from a text file and multicasts them to a group, with clients joining to receive updates in real-time for 100+ stocks. Includes a detailed README.</p>
-        <a href="https://github.com/JustisDutt/MulticastStockTicker">GitHub</a>
+        <a href="https://github.com/JustisDutt/Multicast-Stock-Ticker-Java">GitHub</a>
       </div>
       <div class="project">
         <h3>Java Calculator</h3>
         <p>A Java-based calculator with a Swing GUI, supporting basic arithmetic operations, keyboard input, and precise calculations using BigDecimal.Includes a detailed README.</p>
-        <a href="https://github.com/JustisDutt/JavaCalculator">GitHub</a>
+        <a href="https://github.com/JustisDutt/Java-Swing-GUI">GitHub</a>
       </div>
     </div>
   </section>
@@ -108,7 +108,7 @@
     <h2>Contact</h2>
     <div class="contact-info">
       <p><span class="contact-badge"><a href="mailto:justisdutt@gmail.com">Email: justisdutt@gmail.com</a></span></p>
-      <p><span class="contact-badge"><a href="https://www.linkedin.com/in/justisdutt">LinkedIn</a></span></p>
+      <p><span class="contact-badge"><a href="https://www.linkedin.com/in/justis-dutt-951834224/">LinkedIn</a></span></p>
       <p><span class="contact-badge"><a href="https://github.com/JustisDutt">GitHub</a></span></p>
       <p><span class="contact-badge"><a href="assets/resume.pdf">Resume</a></span></p>
     </div>
@@ -129,4 +129,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
