--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Justis Dutt's portfolio: Software engineer skilled in Java, JavaScript, Python. Explore my projects and contact me!">
   <title>Justis Dutt - Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
@@ -131,6 +132,7 @@
 </body>
 
 </html>
+
 
 
 
