--- a/index.html
+++ b/index.html
@@ -52,8 +52,11 @@
   <section id="about" class="section">
     <h2>About Me</h2>
     <div class="about-content">
+      <img src="images/Headshot.jpg" alt="Justis Dutt" class="about-image">
+      <div class ="about-text">
       <p>My name is Justis Dutt, and I will graduate in December 2025 from California State University, Stanislaus with a Bachelor's in Computer Science. As a Peer Educator for 3+ years, I have tutored over 200 students in programming and mathematical concepts, enhancing their understanding of complex topics. I also work part-time as a Construction Technologist at Baron's Construction Services, where I designed and implemented technology solutions that reduced operational time by 30% through standardized procedures.</p>
       <p>My passion for tech stems from solving challenging problems and creating innovative, user-focused solutions. With over 4 years of experience in software development, I specialize in Java, JavaScript, and Python, and I thrive in collaborative environments, continuously learning new technologies.</p>
+    </div>
     </div>
   </section>
 
@@ -136,3 +139,4 @@
 </body>
 
 </html>
+
