--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <p><span class="contact-badge"><a href="mailto:justisdutt@gmail.com">Email: justisdutt@gmail.com</a></span></p>
       <p><span class="contact-badge"><a href="https://www.linkedin.com/in/justis-dutt-951834224/">LinkedIn</a></span></p>
       <p><span class="contact-badge"><a href="https://github.com/JustisDutt">GitHub</a></span></p>
-      <p><span class="contact-badge"><a href="assets/ResumeJustisDutt.pdf" target="_blank" rel="noopener">Resume</a></span></p>
+      <p><span class="contact-badge"><a href="assets/JustisDuttResume.pdf" target="_blank" rel="noopener">Resume</a></span></p>
     </div>
     <form id="contact-form">
       <label for="name">Name:</label>
@@ -139,5 +139,6 @@
 </body>
 
 </html>
+
 
 
