--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <p class="subtitle">Software Engineer | Bachelor's of Science in Computer Science</p>
       <div class="button-container"></div>
       <a href="#projects" class="btn">View My Work</a>
-    <a href="assets/ResumeJustisDutt.pdf" class="btn" target="_blank" rel="noopener">View My Resume</a>
+    <a href="assets/JustisDuttResume.pdf" class="btn" target="_blank" rel="noopener">View My Resume</a>
     </div>
     </div>
   </section>
@@ -139,6 +139,7 @@
 </body>
 
 </html>
+
 
 
 
