--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <h2>About Me</h2>
     <div class="about-content">
     <!-- Image -->
-      <img src="images/Headshot.JPG" alt="Justis Dutt" class="about-image" loading="lazy" decoding="async">
+      <img src="images/headshot.jpg" alt="Justis Dutt" class="about-image" loading="lazy" decoding="async">
       <div class="about-text">
         <p>My name is Justis Dutt, and I will graduate in December 2025 from California State University, Stanislaus with a Bachelor's in Computer Science. As a Peer Educator for 3 years, I have tutored over 150 students in programming and mathematical concepts, enhancing their understanding of complex topics. I also work part-time as a Construction Technologist at Baron's Construction Services, where I design and implement technology solutions that aim to reduce operational time through standardized procedures.</p>
         <p>My passion for tech stems from solving challenging problems and creating innovative, user-focused solutions. With over 4 years of experience in software development, I specialize in Java, JavaScript, and Python, and I thrive in collaborative environments, continuously learning new technologies.</p>
@@ -163,5 +163,6 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
 
 
