--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js" defer></script>
+
+  <!-- Mobile fix: stack About image above text -->
+  <style>
+    @media (max-width: 768px) {
+      .about-content {
+        flex-direction: column;
+        align-items: center;
+      }
+      .about-image {
+        width: min(340px, 100%);
+        max-width: 100%;
+        margin-bottom: 1rem;
+      }
+      .about-text {
+        width: 100%;
+      }
+    }
+  </style>
 </head>
 <body>
   <!-- Preloader -->
@@ -59,7 +77,7 @@
   <section id="about" class="section">
     <h2>About Me</h2>
     <div class="about-content">
-    <!-- Image -->
+      <!-- Image -->
       <img src="images/Headshot.jpg" alt="Justis Dutt" class="about-image" loading="lazy" decoding="async">
       <div class="about-text">
         <p>My name is Justis Dutt, and I will graduate in December 2025 from California State University, Stanislaus with a Bachelor's in Computer Science. As a Peer Educator for 3 years, I have tutored over 150 students in programming and mathematical concepts, enhancing their understanding of complex topics. I also work part-time as a Construction Technologist at Baron's Construction Services, where I design and implement technology solutions that aim to reduce operational time through standardized procedures.</p>
@@ -163,7 +181,3 @@
   <script src="script.js" defer></script>
 </body>
 </html>
-
-
-
-
